# wally_os

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: exit.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
