[package]
name = "wally_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# Having this enabled can lead to a "duplicate lang item" error when running `cargo test`.
# Just commenting this out for the affected profile fixes the issue.
# panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.6"
volatile = "0.2.6"
