[package]
name = "wally_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# Having this enabled can lead to a "duplicate lang item" error when running `cargo test`.
# Just commenting this out for the affected profile fixes the issue.
# panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
test-args = [
  # tell qemu to exit on test completion
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  # tell qemu to direct output to stdout
  "-serial", "stdio",
  # do not open the qemu window when running tests.
  # we don't need this since the test output is re-routed to the terminal
  "-display", "none"
]
# we specify our own success code since `cargo test` considers all non-zero exit
# codes as a failure
test-success-exit-code = 33
# manually define the test timeout
test-timeout = 300 # (this is the default but i want to keep this here)

# Disable the harness for our should_panic tests.
# This tells the compiler to treat this like a normal executable.
[[test]]
name = "should_panic"
harness = false

# Disable the harness for our stack_overflow tests.
# This tells the compiler to treat this like a normal executable.
[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.6"
uart_16550 = "0.2.18"
# we cannot use the newer version of volatile as it is incompatible
volatile = "0.2.6"
x86_64 = "0.14.10"
pic8259 = "0.10.1"
